# family-accounting

./: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  pyproject.toml  tailwind.config.mjs  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  deploy.yml
docs/: api.md  mobile-ux-optimization-plan.md  production-deployment.md  ux-flow.md
docs/user-journey/: README.md  skill-subagent-validation.md
examples/: Procfile.prod  wsgi.py
family_accounting/: __init__.py  api.py  hooks.py  ledger_core.py  modules.txt  patches.txt
family_accounting/family_accounting/: __init__.py
family_accounting/family_accounting/doctype/: __init__.py
family_accounting/family_accounting/doctype/family_accounting_budget/: __init__.py  family_accounting_budget.json  family_accounting_budget.py
family_accounting/family_accounting/doctype/family_accounting_entry/: __init__.py  family_accounting_entry.json  family_accounting_entry.py
family_accounting/public/: family-ledger-loader.js
family_accounting/www/: family-ledger.html  family-ledger.py
llm/skills/family-accounting-assistant/: SKILL.md
llm/skills/family-accounting-assistant/agents/: openai.yaml
src/: App.vue  api.ts  main.ts  styles.css  types.ts
src/mock-api/: ledger.ts  server.ts
src/types/: frappe-ui-shim.d.ts  frappe-ui-vite-shim.d.ts  style-shim.d.ts
tests/api/: family-accounting-api.test.ts
tests/component/: mobile-ux.test.ts
tests/e2e/: family-ledger.spec.ts
tests/python/: test_ledger_core.py
tests/unit/: app-ux.test.ts  ledger.test.ts  skill.test.ts
(+1 files in other folders)
